--- a/Resume.css
+++ b/Resume.css
@@ -1,20 +1,20 @@
 
 .grid-1{
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     padding: 10px;
     margin-top: -20px;
     background-color: #e86100;
-   
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     
 }
 .grid-2{
     display: grid;
-    /* display: flex; */
+
+
+    /* display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: center; */
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-     /* grid-template-columns: repeat(5,1fr);  */
     padding: 10px;
     background-color: blue;
 }
@@ -33,7 +33,7 @@
     font-family: cursive;
     text-transform: uppercase;
     margin-top: 10%;
-    background-color: antiquewhite;
+    padding-left: 100px;
     height: 100px;
     align-items: center;
     justify-content: center;
@@ -51,8 +51,8 @@
     padding: 30px;
     background-color: antiquewhite;
     border-radius: 30px;
-    grid-gap: 20px;
-    grid-column: 1/3;
+     grid-gap: 20px;
+    
 }
 .item-leftt p{
     font-family: cursive;
@@ -67,8 +67,8 @@
     background-color: rgb(182, 27, 167);
     border-radius: 30px;
     margin-left: 10px;
-    grid-gap: 20px;
-    grid-column: 3/6;
+     grid-gap: 20px;
+     
 }
 .item-right p{
     font-family: cursive;
